--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,7 +2,7 @@ name: tweetbot
 
 on:
   schedule:
-    - cron: '35 19 * * *'
+    - cron: '58 19 * * *'
 
 jobs:
   tweetbot-post:
@@ -15,7 +15,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@master
       - name: Install packages
-        run: Rscript -e 'install.packages(c("rtweet", "dplyr", "curl", "jsonlite"))'
+        run: Rscript -e 'install.packages(c("rtweet", "dplyr", "curl", "jsonlite", "remotes"))'
+      - name: Install GitHub packages
+        run: Rscript -e 'remotes::install_github("ropensci/rtweet")'
       - name: Download data
         run: Rscript tweets_action.R
       - name: Commit files
