--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,7 +2,7 @@ name: tweetbot
 
 on:
   schedule:
-    - cron: '05 20 * * *'
+    - cron: '45 20 * * *'
 
 jobs:
   tweetbot-post:
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@master
       - name: Install packages
-        run: Rscript -e 'install.packages(c("rtweet", "dplyr", "curl", "jsonlite", "remotes", "DBI"))'
+        run: Rscript -e 'install.packages(c("rtweet", "dplyr", "curl", "jsonlite", "remotes", "DBI", "RSQLite"))'
       - name: Install GitHub packages
         run: Rscript -e 'remotes::install_github("ropensci/rtweet")'
       - name: Download data
